modified title in mission.html

--- a/mission.html
+++ b/mission.html
@@ -57,6 +57,7 @@
       <div id="mainContent">
         <div id="contentHeader">
           <h1>Our Mission</h1>
+          <h2>This is a new mission for your directive</h2>
         </div>
         <div id="mainArticle">
           <h1>Who we are</h1>
